k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ecommerce
  namespace: ecommerce

spec:
  replicas: 2

  selector:
    matchLabels:
      app: ecommerce

  template:
    metadata:
      labels:
        app: ecommerce

    spec:
      containers:
      - name: ecommerce

        image: nginx

        ports:
        - containerPort: 8080
